added spring, oauth, and server push via activemq